@@ -1,4 +1,8 @@
 2019-12-20 Magnus Hagdorn
+ * piccolo3/client/PiccoloSpectrometer.py: add methods to set/get state of TEC
+   and set/get target detector temperature
+
+2019-12-20 Magnus Hagdorn
  * piccolo3/client/PiccoloSpectrometer.py: check if TEC is present; add
    method to get current temperature
 
